Adicionando Post e Get do Pedido
